# MCP_Server_Sandbox

./: .gitignore  =2.0  QWEN.md  README.md  bandit_out.txt  mypy_out.txt  pyproject.toml  radon_mi_out.txt  radon_out.txt  ruff_out.txt
build-plan-phases/: 00-quick-summary.md  01-bootstrap.md  02-repo-scanner.md  03-ast-extraction.md  03b-nesting-support.md  04-graph-storage.md  05-context-builder.md  06-lsp-references.md  07-risk-engine.md  08-mcp-server.md  09-watch-mode.md  10-real-workflow.md
src/repo_context/: __init__.py  config.py  constants.py  logging_config.py
src/repo_context/cli/: __init__.py  main.py  utils.py
src/repo_context/context/: __init__.py  builders.py  freshness.py  helpers.py  summaries.py
src/repo_context/graph/: __init__.py  filters.py  queries.py  references.py  risk_engine.py  risk_facts.py  risk_rules.py  risk_scoring.py  risk_targets.py  risk_types.py
src/repo_context/indexing/: __init__.py  events.py  incremental.py  invalidation.py  scheduler.py  watch.py
src/repo_context/lsp/: __init__.py  (+5 more)
tests/: __init__.py  test_ast_extraction.py  test_cli.py  test_cli_commands.py  test_context_builder.py  test_context_freshness.py  test_context_summaries.py  test_db_init.py  test_graph_queries.py  test_graph_storage.py  test_hashing.py  test_logging_config.py  test_lsp_references.py  test_mcp_server_integration.py  test_mcp_tools.py  test_models.py  test_models_repo_pydantic.py  test_pathing.py  test_real_workflow.py  test_risk_engine.py  test_scanner.py  test_smoke.py  test_validation_exceptions.py  test_validators.py  test_watch_mode.py
(+83 files in other folders)
